--- a/public/documentation/components/dropdowns.html
+++ b/public/documentation/components/dropdowns.html
@@ -743,7 +743,7 @@
                 <div class="ct-docs-footer-copyright">
                   © <script>
                     document.write(new Date().getFullYear())
-                  </script> <a href="https://creative-tim.com" class="ct-docs-footer-copyright-author" target="_blank">Creative Tim & UPDIVISION</a>
+                  </script> <a href="https://creative-tim.com" class="ct-docs-footer-copyright-author" target="_blank">Creative Tim & <a href="https://www.updivision.com" class="ct-docs-footer-copyright-author" target="_blank">UPDIVISION</a>
                 </div>
               </div>
               <div class="ct-docs-footer-col">
@@ -751,6 +751,9 @@
                   <li>
                     <a href="https://creative-tim.com" class="ct-docs-footer-nav-link" target="_blank">Creative Tim</a>
                   </li>
+                  <li class="nav-item">
+                    <a href="https://www.updivision.com" class="ct-docs-footer-nav-link" target="_blank">UPDIVISION</a>
+                </li>
                   <li>
                     <a href="https://www.creative-tim.com/contact-us" class="ct-docs-footer-nav-link" target="_blank">Contact Us</a>
                   </li>
