--- a/public/documentation/components/popovers.html
+++ b/public/documentation/components/popovers.html
@@ -623,7 +623,7 @@ sagittis lacus vel augue laoreet rutrum faucibus.<span class="token punctuation"
                 <div class="ct-docs-footer-copyright">
                   © <script>
                     document.write(new Date().getFullYear())
-                  </script> <a href="https://creative-tim.com" class="ct-docs-footer-copyright-author" target="_blank">Creative Tim & UPDIVISION</a>
+                  </script> <a href="https://creative-tim.com" class="ct-docs-footer-copyright-author" target="_blank">Creative Tim & <a href="https://www.updivision.com" class="ct-docs-footer-copyright-author" target="_blank">UPDIVISION</a>
                 </div>
               </div>
               <div class="ct-docs-footer-col">
@@ -631,6 +631,9 @@ sagittis lacus vel augue laoreet rutrum faucibus.<span class="token punctuation"
                   <li>
                     <a href="https://creative-tim.com" class="ct-docs-footer-nav-link" target="_blank">Creative Tim</a>
                   </li>
+                  <li class="nav-item">
+                    <a href="https://www.updivision.com" class="ct-docs-footer-nav-link" target="_blank">UPDIVISION</a>
+                </li>
                   <li>
                     <a href="https://www.creative-tim.com/contact-us" class="ct-docs-footer-nav-link" target="_blank">Contact Us</a>
                   </li>
