update to Laravel 9.x

--- a/public/documentation/components/buttons.html
+++ b/public/documentation/components/buttons.html
@@ -137,7 +137,7 @@
         <a href="../../documentation/getting-started/installation.html" class="ct-docs-navbar-text">
           Docs
         </a>
-      
+
       <ul class="ct-docs-navbar-nav-left">
         <li class="ct-docs-nav-item-dropdown">
           <a href="javascript:;" class="ct-docs-navbar-nav-link" role="button">
@@ -213,7 +213,7 @@
                         </li>
                         <li class="">
                           <a href="../../documentation/getting-started/installation.html">
-                            installation
+                            Installation
                           </a>
                         </li>
                         <li class="">
