--- a/public/documentation/components/forms.html
+++ b/public/documentation/components/forms.html
@@ -12,9 +12,9 @@
       Forms | Material Dashboard 2 FREE Laravel by Creative Tim & UPDIVISION
     </title>
     <link rel="canonical" href="https://www.creative-tim.com/learning-lab/bootstrap/colors/material-dashboard" />
-    
+
     <meta name="keywords" content="creative tim, updivision, html dashboard, laravel,  html css dashboard laravel, web dashboard, bootstrap 5 dashboard laravel, bootstrap 5, css3 dashboard, bootstrap 5 admin laravel, frontend, responsive bootstrap 5 dashboard">
-    
+
     <meta name="description" content="Dozens of handcrafted UI components, Laravel authentication, register & profile editing.">
 
     <meta name="twitter:card" content="product">
@@ -31,15 +31,15 @@
     <meta property="og:description" content="Fullstack tool for building Laravel apps with hundreds of UI components and ready-made CRUDs." />
     <meta property="og:site_name" content="Creative Tim" />
 
-    
+
     <link rel="stylesheet" href="../../assets/css/nucleo-icons.css" type="text/css">
- 
+
     <link rel="stylesheet" href="../../assets/css/nextjs-material-dashboard-pro.min.css" type="text/css">
 
     <link rel="stylesheet" href="../../assets/css/material-dashboard.min.css" type="text/css">
     <link rel="stylesheet" href="../../assets/css/demo.css" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    
+
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700" rel="stylesheet">
 
     <link href="../../assets/css/nucleo-icons.css" rel="stylesheet">
@@ -127,7 +127,7 @@
         <a href="../../documentation/getting-started/installation.html" class="ct-docs-navbar-text">
           Docs
         </a>
-      
+
       <ul class="ct-docs-navbar-nav-left">
         <li class="ct-docs-nav-item-dropdown">
           <a href="javascript:;" class="ct-docs-navbar-nav-link" role="button">
@@ -203,7 +203,7 @@
                 </li>
                 <li class="">
                   <a href="../../documentation/getting-started/installation.html">
-                    installation
+                    Installation
                   </a>
                 </li>
                 <li class="">
@@ -1061,6 +1061,6 @@
       }
     </script>
     <script src="../../assets/js/docs.js"></script>
-  
+
 </body>
   </html>
